# query_10k_using_rag

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: playground.ipynb  server.py
